# docs/swagger.yaml
@@ -1,10 +1,176 @@
 basePath: /
-host: http://127.0.0.1:8080
+definitions:
+  driver.ColName:
+    properties:
+      eng:
+        type: integer
+      id:
+        type: integer
+      math:
+        type: integer
+    type: object
+  models.Error:
+    properties:
+      message:
+        type: string
+    type: object
+  models.JWT:
+    properties:
+      token:
+        type: string
+    type: object
+  models.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      password:
+        type: string
+    type: object
+host: localhost
 info:
   contact: {}
-  description: define an API
+  description: Define an API
   license: {}
   title: Restful API
   version: 1.0.0
-paths: {}
+paths:
+  /contacts:
+    get:
+      consumes:
+      - application/json
+      description: 取得所有資料
+      parameters:
+      - description: 安全碼
+        in: body
+        name: token
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: get all datas
+          schema:
+            $ref: '#/definitions/driver.ColName'
+        "500":
+          description: Serve(database) error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: get all datas
+      tags:
+      - Data
+  /contacts/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 取得部分資料
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 安全碼
+        in: body
+        name: token
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: get some datas(from database)
+          schema:
+            $ref: '#/definitions/driver.ColName'
+        "500":
+          description: Serve(database) error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: get some datas
+      tags:
+      - Data
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: 登入
+      parameters:
+      - description: 信箱
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: get json-token-web
+          schema:
+            $ref: '#/definitions/models.JWT'
+        "400":
+          description: email or password error
+          schema:
+            $ref: '#/definitions/models.Error'
+        "401":
+          description: Invaild Password
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Serve(database) error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Login
+      tags:
+      - User
+  /signup:
+    post:
+      consumes:
+      - application/json
+      description: 註冊
+      parameters:
+      - description: 信箱
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully sign up!
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: email or password error
+          schema:
+            $ref: '#/definitions/models.Error'
+        "401":
+          description: E-mail already taken
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Serve(database) error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: create a new account
+      tags:
+      - User
 swagger: "2.0"
